# hexlet-django-blog

./: Makefile  db.sqlite3  pyproject.toml  term
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/: article.html
hexlet_django_blog/templates/: about.html  index.html
